# solana-admin-instructions

./: .gitignore  Anchor.toml  README.md  envK7QRnj5Vm7m7yrB2bTn8YUpM6AYFW7WW1NK8YgTY.json  envdsQqsysKjFMcPSo34yPyjenZpaWg9J1TgtKMFgZp.json  package-lock.json  package.json
programs/config/: Cargo.toml
programs/config/src/: instructions.rs  lib.rs  state.rs
programs/config/src/instructions/: initialize.rs  payment.rs
programs/config/src/instructions/admin/: initialize_admin_config.rs  mod.rs  update_admin_config.rs
programs/config/src/instructions/program_config/: initialize_program_config.rs  mod.rs  update_program_config.rs  update_program_config_fee.rs
tests/: config.ts
tests/keys/: envgiPXWwmpkHFKdy4QLv2cypgAWmVTVEm71YbNpYRu.json  test-WaoKNLQVDyBx388CfjaVeyNbs3MT2mPgAhoCfXyUvg8.json  test-onekajdRYYfjqVNRmDWF3cGepGcNhGjjTaY6rTbKi9c.json
